feat: support mc 1.20.6
But not really, cause the vanilla datapacks need to update
first.